# sig-core-toolkit

./: .disable.gitlab-ci.yml  .gitignore  .gitlab-ci.yml  README.md
analyze/: gen_download_statistics.sh
chat/: common  fetch_mattermost_client_release
cron/: beta-10  beta-8  beta-9  changelog-cleanup  lookahead-10  lookahead-8  lookahead-9  lookahead-cleanup-10  lookahead-cleanup-9  lookahead-find-unsigned-10  lookahead-find-unsigned-9  stable-10  stable-9  stable-cleanup-10  stable-cleanup-8  stable-cleanup-9  stable-find-unsigned-10  stable-find-unsigned-9  stable-updates-10  stable-updates-8  stable-updates-9  stable-updates-no-devel-8  stable-updates-no-push-8
func/: .gitignore  README.md  debrand.list  ipa.sh  mods.list  monotests.sh  runtests.sh  skip.list  stacks.sh
iso/: common_8  common_9
iso/empanadas/: .gitignore  Containerfile  Containerfile.imagefactory  README.md  build-container.sh  imagefactory.patch  oz.rpm  prep-azure.sh  pyproject.toml
iso/empanadas/empanadas/: .common.py.swp  common.py
iso/empanadas/empanadas/backends/: __init__.py  imagefactory.py  interface.py  kiwi.py  kiwi_imagedata.py
iso/empanadas/empanadas/builders/: __init__.py  imagebuild.py  utils.py
iso/empanadas/empanadas/configs/: .el9.yaml.swp  .el9lh.yaml.swp  el10.yaml  el10lh.yaml  el8-beta.yaml  el8-cloud.yaml  el8.yaml  el8lh.yaml  el9-beta.yaml  el9.yaml  el9alt.yaml  el9lh.yaml  rln.yaml
iso/empanadas/empanadas/scripts/: .sync_from_peridot.py.swp  build_image.py  build_iso.py  build_iso_extra.py  build_iso_live.py  build_iso_live_test.py  finalize_compose.py  generate_compose.py  launch_builds.py  peridot_repoclosure.py  pull_cloud_image.py  pull_iso_image.py  pull_unpack_artifact.py  pull_unpack_tree.py  refresh_all_treeinfo.py  sync-from-peridot-test.py  sync-from-peridot.py  sync-sig.py  sync_from_peridot.py  sync_from_peridot_test.py  sync_sig.py  test_module.py
iso/empanadas/empanadas/sig/: altarch.yaml  cloud.yaml  core.yaml  desktop.yaml  fasttrack.yaml  hpc.yaml  kernel.yaml  security.yaml  virt.yaml
iso/empanadas/empanadas/templates/: ISOREADME.tmpl  README.tmpl  buildExtraImage.tmpl.sh  buildImage.tmpl.sh  buildLiveImage.tmpl.sh  extraisobuild.tmpl.sh  isobuild.tmpl.sh  isomock.tmpl.cfg  liveisobuild.tmpl.sh  mkiso.tmpl.sh  repoconfig.tmpl  reposync-src.tmpl  reposync.tmpl  verifygpg.tmpl  xorriso.tmpl.txt
iso/empanadas/empanadas/templates/icicle/: tdl-new.xml.tmpl  tdl.xml.tmpl
iso/empanadas/empanadas/templates/kiwi/: kiwi.yml.j2
iso/empanadas/empanadas/templates/kube/: Job.tmpl
iso/empanadas/empanadas/templates/minimal/9/: aarch64  aarch64.xml  ppc64le  ppc64le.xml  s390x  s390x.xml  x86_64  x86_64.xml
iso/empanadas/empanadas/templates/vagrant/: Vagrantfile.Libvirt  Vagrantfile.VMware  Vagrantfile.Vbox  box.tmpl.ovf  info.tmpl.json  metadata.tmpl.json  vmx.tmpl
iso/empanadas/empanadas/util/: .shared.py.swp  __init__.py  check.py  dnf_utils.backup  dnf_utils.py  iso_utils.py  shared.py
iso/empanadas/images/: get_arch  rhel.repo  yum-sudo
iso/empanadas/tests/: test_empanadas.py
live/: common
mangle/: README.md  common  compare-amis.go  fix-aws-quotas.sh  generate_comps  go.mod  quick-bump.py  quotas.go  rlutil.py  validate_repos
sync/: .sync-to-prod.sh.swp  README.md  beta-release-sync-to-staging.sh  common  common_10  common_8  common_9  gen-torrents.sh  import-snapshot-publish-aws.sh  lh-release-sync-to-staging.sh  minor-release-sync-to-staging.sh  oval.sh  prep-staging-8.sh  prep-staging.sh  propagate-image.sh  sign-repos-only.sh  stage-live-images.sh  symlink-images-and-checksum.sh  sync-file-list-parallel.sh  sync-file-list-vault.sh  sync-full-file-list.sh  sync-root-file-list.sh  sync-sig-file-list.sh  sync-to-prod-9.sh  sync-to-prod-all.sh  sync-to-prod-dry.sh  sync-to-prod-sig.sh  sync-to-prod.delete.sh  sync-to-prod.sh  sync-to-staging-9.sh  sync-to-staging-fpsync-testing.sh  sync-to-staging-sig.sh  sync-to-staging.delete.sh  sync-to-staging.sh  sync-to-vault.sh  (+4 more)
(+373 files in other folders)
