[tool.poetry]
name = "empanadas"
version = "0.6.2"
description = "hand crafted ISOs with love and spice"
authors = ["Louis Abel <label@rockylinux.org>", "Neil Hanlon <neil@rockylinux.org>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
rpm = ">=0.1.0"
MarkupSafe = "<=2.1.3"
PyYAML = "~6.0.1"
Jinja2 = "~2"
productmd = "~1.37"
importlib-resources = "^5.8.0"
boto3 = "^1.28.80"
xmltodict = "^0.13.0"
requests = "^2.31.0"
kobo = "^0.33.0"
attrs = "^23.1.0"

[tool.poetry.dev-dependencies]
pytest = "~5"

[tool.poetry.scripts]
test_module = "empanadas.scripts.test_module:run"
sync_from_peridot = "empanadas.scripts.sync_from_peridot:run"
sync_from_peridot_test = "empanadas.scripts.sync_from_peridot_test:run"
sync_sig = "empanadas.scripts.sync_sig:run"
build-iso = "empanadas.scripts.build_iso:run"
build-iso-extra = "empanadas.scripts.build_iso_extra:run"
build-iso-live = "empanadas.scripts.build_iso_live:run"
pull-unpack-tree = "empanadas.scripts.pull_unpack_tree:run"
launch-builds = "empanadas.scripts.launch_builds:run"
build-image = "empanadas.scripts.build_image:run"
finalize_compose = "empanadas.scripts.finalize_compose:run"
pull-cloud-image = "empanadas.scripts.pull_cloud_image:run"
generate_compose = "empanadas.scripts.generate_compose:run"
peridot_repoclosure = "empanadas.scripts.peridot_repoclosure:run"
refresh_all_treeinfo = "empanadas.scripts.refresh_all_treeinfo:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
