[tool.poetry]
name = "empanadas"
version = "0.7.1"
description = "hand crafted ISOs with love and spice"
authors = ["Louis Abel <label@rockylinux.org>", "Neil Hanlon <neil@rockylinux.org>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
rpm = ">=0.1.0"
MarkupSafe = "==3.0.2"
PyYAML = "~6.0.2"
Jinja2 = "~3"
productmd = "~1.38"
importlib-resources = "^5.8.0"
boto3 = "^1.35.55"
xmltodict = "^0.14.2"
requests = "^2.32.2"
kobo = "^0.37.0"
attrs = "^24.2.0"
GitPython = ">=3.1.30"

[tool.poetry.dev-dependencies]
pytest = "~5"

[tool.poetry.scripts]
test-module = "empanadas.scripts.test_module:run"
sync-from-peridot = "empanadas.scripts.sync_from_peridot:run"
sync-from-peridot-test = "empanadas.scripts.sync_from_peridot_test:run"
sync-sig = "empanadas.scripts.sync_sig:run"
build-iso = "empanadas.scripts.build_iso:run"
build-iso-extra = "empanadas.scripts.build_iso_extra:run"
build-iso-live = "empanadas.scripts.build_iso_live:run"
pull-unpack-tree = "empanadas.scripts.pull_unpack_tree:run"
launch-builds = "empanadas.scripts.launch_builds:run"
build-image = "empanadas.scripts.build_image:run"
finalize-compose = "empanadas.scripts.finalize_compose:run"
pull-cloud-image = "empanadas.scripts.pull_cloud_image:run"
generate-compose = "empanadas.scripts.generate_compose:run"
peridot-repoclosure = "empanadas.scripts.peridot_repoclosure:run"
refresh-all-treeinfo = "empanadas.scripts.refresh_all_treeinfo:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
